k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerbi-embed
  namespace: default
spec:
  selector:
    app: powerbi-embed
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
